samples/_failures_safe/1761248658_9da618_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54245670.c: In function ‘main’:
./samples/SAFE/__tmp_54245670.c:135:17: error: ‘fill’ undeclared (first use in this function)
  135 |                 fill
      |                 ^~~~
./samples/SAFE/__tmp_54245670.c:135:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_54245670.c:135:21: error: expected ‘;’ at end of input
  135 |                 fill
      |                     ^
      |                     ;
./samples/SAFE/__tmp_54245670.c:135:17: error: expected declaration or statement at end of input
  135 |                 fill
      |                 ^~~~
./samples/SAFE/__tmp_54245670.c:135:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54245670.c:135:17: error: expected declaration or statement at end of input
